package dmMeshDDF;

import "ddf/ddf_extensions.proto";
import "ddf/ddf_math.proto";

option java_package = "com.dynamo.mesh.proto";
option java_outer_classname = "MeshProto";

message MeshDesc
{
    required string material = 1 [(resource)=true];
    repeated string textures = 2 [(resource)=true];
}

message Mesh
{
    required string material = 1 [(resource)=true];
    repeated string textures = 2 [(resource)=true];
}
